fix: update dark mode heading color and adjust dark black variable

--- a/assets/sass/_dark.scss
+++ b/assets/sass/_dark.scss
@@ -11,7 +11,7 @@
   h4,
   h5,
   h6 {
-    color: $dark-white;
+    color: #2698ba;
   }
 
   // Table
